--- a/programsederhana.ipynb
+++ b/programsederhana.ipynb
@@ -4,19 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **PROGRAM SEDERHANA**\n",
+    "## Machine Learning\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/LOGO_UEU_BY_ASU-06.png\" width=50% height=50%>\n",
+    "\n",
+    "<table style=\"width:75%\">\n",
+    "  <tr>\n",
+    "    <td><b>Dosen Pengampu</b></td>\n",
+    "    <td>Jefry Sunupurwa Asri , S.Kom., M.Kom.</td>\n",
+    "   </tr>\n",
+    "  <tr>\n",
+    "    <td><b>Mahasiswa</b></td>\n",
+    "    <td>Raynaldi Sandy</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><b>NIM</b></td>\n",
+    "    <td>20210801453</td>\n",
+    "  </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "PENJUMLAHAN "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil penjumlahan dari 1.0 dan 2.0 adalah: 3.0\n"
+      "Hasil penjumlahan dari 3.0 dan 4.0 adalah: 7.0\n"
      ]
     }
    ],
@@ -36,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil pengurangan dari 3.0 dan 2.0 adalah: 1.0\n"
+      "Hasil pengurangan dari 2.0 dan 1.0 adalah: 1.0\n"
      ]
     }
    ],
@@ -63,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil perkalian dari 4.0 dan 5.0 adalah: 20.0\n"
+      "Hasil perkalian dari 3.0 dan 4.0 adalah: 12.0\n"
      ]
     }
    ],
@@ -90,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
