--- a/tugas2.ipynb
+++ b/tugas2.ipynb
@@ -4,12 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **TUGAS PERTEMUAN 2**\n",
+    "## Machine Learning\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/LOGO_UEU_BY_ASU-06.png\" width=50% height=50%>\n",
+    "\n",
+    "<table style=\"width:75%\">\n",
+    "  <tr>\n",
+    "    <td><b>Dosen Pengampu</b></td>\n",
+    "    <td>Jefry Sunupurwa Asri , S.Kom., M.Kom.</td>\n",
+    "   </tr>\n",
+    "  <tr>\n",
+    "    <td><b>Mahasiswa</b></td>\n",
+    "    <td>Raynaldi Sandy</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><b>NIM</b></td>\n",
+    "    <td>20210801453</td>\n",
+    "  </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "SOAL 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -139,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 4 2 3 4 1 3 1 4 3 4 2 4 3 1 3 3 2 3 4 1 3 2 1 1 1 2 3 2 1]\n",
-      " [2 2 2 4 2 1 2 4 4 2 4 1 3 1 4 4 2 3 3 2 4 4 3 4 2 4 2 4 2 4]\n",
-      " [4 2 3 2 2 3 1 1 2 4 1 4 1 4 3 3 3 2 4 4 2 1 2 1 3 4 1 4 3 1]]\n"
+      "[[1 1 4 2 2 1 2 3 4 4 1 4 1 1 4 2 1 4 3 2 3 4 4 3 3 2 1 1 2 2]\n",
+      " [4 2 1 1 1 4 1 3 3 1 3 1 2 2 1 3 4 3 3 3 1 4 4 4 1 3 3 4 4 4]\n",
+      " [2 3 1 3 1 3 2 1 1 4 2 4 1 2 1 4 2 4 1 2 1 3 3 3 4 2 4 4 1 1]]\n"
      ]
     }
    ],
